Refactor BookingManager for package structure and clarity